--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "^4.3.3",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "express": "^4.14.0",
     "normalize.css": "^7.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
