--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
+    "moment": "^2.22.0",
     "normalize.css": "^7.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
@@ -50,6 +51,6 @@
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
     "typescript": "~2.2.0",
-    "webpack-sources":"~1.1.0"
+    "webpack-sources": "~1.1.0"
   }
 }
