Improvements on usability

--- a/angular.json
+++ b/angular.json
@@ -55,11 +55,11 @@
               ],
               "optimization": false,
               "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
+              "sourceMap": true,
+              "extractCss": false,
+              "namedChunks": true,
               "aot": true,
-              "extractLicenses": true,
+              "extractLicenses": false,
               "vendorChunk": false,
               "buildOptimizer": false
             }
