--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@ng-bootstrap/ng-bootstrap": "^2.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.2.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "express": "^4.14.0",
+    "font-awesome": "^4.7.0",
     "moment": "^2.22.2",
     "normalize.css": "^7.0.0",
     "rxjs": "^6.0.0",
