--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,9 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.css"
             ],
             "scripts": []
@@ -45,7 +48,6 @@
               "vendorChunk": false,
               "buildOptimizer": true
             },
-
             "working": {
               "fileReplacements": [
                 {
@@ -74,11 +76,9 @@
             "production": {
               "browserTarget": "zentrader-web:build:production"
             },
-
             "working": {
               "browserTarget": "zentrader-web:build:working"
             }
-
           }
         },
         "extract-i18n": {
@@ -95,6 +95,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.css"
             ],
             "scripts": [],
