--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "~10.12.18",
     "@types/jasmine": "~3.3.5",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~10.12.18",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -55,6 +55,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.12.0",
-    "typescript": "~3.1.6"
+    "typescript": "^3.1.6"
   }
 }
