--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,28 @@
               "vendorChunk": false,
               "buildOptimizer": true
             },
+            "pt": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+	      "aot": true,
+              "outputPath": "dist/under-construction-pt/",
+              "i18nFile": "src/locale/messages.pt.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "fr",
+              "i18nMissingTranslation": "error",
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
+            },
             "working": {
               "fileReplacements": [
                 {
@@ -75,6 +97,9 @@
           "configurations": {
             "production": {
               "browserTarget": "zentrader-web:build:production"
+            },
+            "pt": {
+              "browserTarget": "zentrader-web:build:pt"
             },
             "working": {
               "browserTarget": "zentrader-web:build:working"
