--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
+    "@fortawesome/fontawesome-free": "^5.13.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-brands-svg-icons": "^5.13.1",
+    "@fortawesome/free-regular-svg-icons": "^5.13.1",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
-    "font-awesome": "^4.7.0",
     "moment": "^2.25.3",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.5",
