--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.2.5",
-    "@angular/cdk": "^9.2.2",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.2.5",
     "@angular/compiler": "~10.2.5",
     "@angular/core": "~10.2.5",
     "@angular/forms": "~10.2.5",
     "@angular/localize": "^10.2.5",
-    "@angular/material": "~9.2.2",
+    "@angular/material": "~10.2.7",
     "@angular/platform-browser": "~10.2.5",
     "@angular/platform-browser-dynamic": "~10.2.5",
     "@angular/router": "~10.2.5",
@@ -31,6 +31,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
