--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
