--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
@@ -57,6 +57,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
+    "raw-loader": "^4.0.2",
     "ts-node": "~8.10.1",
     "tslint": "~6.1.0",
     "typescript": "~4.3.5"
