--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
-    "bootstrap": "^4.4.1",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@popperjs/core": "^2.11.6",
+    "@schematics/angular": "^15.1.1",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "moment": "^2.25.3",
@@ -46,11 +48,9 @@
     "@angular/cli": "^15.1.2",
     "@angular/compiler-cli": "^15.1.1",
     "@angular/language-service": "^15.1.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.8",
+    "@types/jasmine": "~3.8.0",
     "@types/node": "^13.13.5",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-core": "~3.8.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
